--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "csv-parse": "^5.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "cors": "^2.8.5",
     "node-cron": "^3.0.2",
     "pg": "^8.11.0"
   },
