--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express-rate-limit": "^6.10.0",
+    "jsonwebtoken": "^9.0.0",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.7",
     "pg": "^8.11.0"
   },
   "devDependencies": {
